# Backtestr_ai

./: .env.ci  .env.development  .env.example  .env.production  .gitattributes  .gitignore  .gitmessage  CLAUDE.md  Cargo.toml  README.md  backtest.sqlite  package.json  pnpm-workspace.yaml  tsconfig.json
.bmad-core/: core-config.yaml  install-manifest.yaml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: build.yml  ci-basic.yml  ci-progressive.yml  ci.yml
benches/: csv_import.rs  memory_usage.rs  query_performance.rs  tick_insertion.rs
crates/backtestr-core/: Cargo.toml
crates/backtestr-core/benches/: indicator_benchmarks.rs  mtf_benchmarks.rs  persistence_benchmarks.rs
crates/backtestr-core/src/: lib.rs  timeframe.rs
crates/backtestr-core/src/aggregation/: bar_aggregator.rs  gap_detector.rs  mod.rs  session_manager.rs  volume_aggregator.rs
crates/backtestr-core/src/engine/: mod.rs
crates/backtestr-core/src/events/: bar_completion.rs  bar_event.rs  event_bus.rs  event_dispatcher.rs  mod.rs  tick_event.rs
crates/backtestr-core/src/indicators/: cache.rs  indicator_trait.rs  mod.rs  pipeline.rs
crates/backtestr-core/src/indicators/momentum/: cci.rs  macd.rs  mod.rs  rsi.rs  stochastic.rs  williams_r.rs
crates/backtestr-core/src/indicators/other/: adx.rs  mod.rs  parabolic_sar.rs  pivot.rs  support_resistance.rs
crates/backtestr-core/src/indicators/trend/: dema.rs  ema.rs  mod.rs  sma.rs  wma.rs
crates/backtestr-core/src/indicators/volatility/: atr.rs  bollinger.rs  donchian.rs  keltner.rs  mod.rs
crates/backtestr-core/src/indicators/volume/: mod.rs  obv.rs  volume_sma.rs  vwap.rs
crates/backtestr-core/src/interfaces/: epic3_contracts.rs  mod.rs
crates/backtestr-core/src/mocks/: mock_position_manager.rs  mod.rs
crates/backtestr-core/src/mtf/: mod.rs  partial_bar.rs  state_manager.rs  state_query.rs  tick_processor.rs  timeframe_state.rs
crates/backtestr-core/src/persistence/: checkpoint_manager.rs  compression.rs  mod.rs  recovery.rs  serialization.rs  validation.rs
crates/backtestr-core/src/positions/: mod.rs  persistence.rs  pnl_calculator.rs  position.rs  position_manager.rs  position_state.rs
crates/backtestr-core/tests/: bar_aggregation_integration.rs  epic3_interface_contracts.rs  indicator_integration_tests.rs  persistence_tests.rs  simple_mtf_indicator_tests.rs
crates/backtestr-data/: Cargo.toml
crates/backtestr-data/benches/: tick_operations.rs
crates/backtestr-data/src/: lib.rs
crates/backtestr-data/src/aggregation/: mod.rs  tick_to_bar.rs
crates/backtestr-data/src/database/: connection.rs  error.rs  mod.rs  operations.rs  schema.rs
crates/backtestr-data/src/import/: csv_import.rs  mod.rs  validator.rs
crates/backtestr-data/src/models/: bar.rs  mod.rs  tick.rs
crates/backtestr-data/tests/: csv_import_test.rs  integration_test.rs
crates/backtestr-ipc/: Cargo.toml
crates/backtestr-ipc/src/: lib.rs
docs/: CREDENTIALS.md
docs/architecture/: adr-002-epic1-progressive-restructuring.md  api-design.md  aws-infrastructure-audit.md  backend-architecture.md  coding-standards.md  data-architecture.md  data-storage-strategy.md  devops-deployment.md  documentation.md  frontend-architecture.md  index.md  infrastructure-sequencing.md  introduction.md  performance-considerations.md  security-architecture.md  source-tree.md  system-overview.md  technology-stack.md  testing-strategy.md
docs/development/: codebase-organization.md  epic-2-performance-baseline.md  epic-2-to-3-transition-prompt.md  epic2-alignment-analysis.md  feature-preservation-matrix.md  git-strategy.md  progressive-development-audit.md
docs/prd/: checklist-results-report.md  epic-1-foundation-core-data-pipeline.md  epic-2-multi-timeframe-synchronization-engine.md  epic-3-core-position-management-execution.md  epic-4-algorithm-integration-python-bridge.md  epic-5-chart-visualization-system.md  epic-6-walkback-replay-engine.md  epic-7-statistical-analysis-reporting.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/qa/gates/: 1.1-project-infrastructure-setup-enhanced.yml  2.1-mtf-state-synchronization.yml  2.2-indicator-pipeline.yml  2.3-bar-formation-advanced.yml  3.1-multi-position-tracking.yml  epic-1.story-1.2-basic-duckdb-integration.yaml  epic-1.story-1.2-basic-sqlite-integration.yaml  epic-2.story-2.0-data-model-foundation.yml  epic-2.story-2.4-state-persistence.yml
docs/stories/: epic-2-configuration-schema.md  epic-2-story-review.md  epic-2-story-summary.md  epic-3-overview.md  story-2.0-data-model-foundation.md  story-2.1-mtf-state-synchronization.md  story-2.2-indicator-pipeline.md  story-2.3-bar-formation-advanced.md  story-2.4-state-persistence.md
docs/stories/epic-1/: PROMPT-story-1.3-implementation.md  performance-baseline-report.md  story-1.1.md  story-1.2.md  story-1.3.md  story-1.4.md  story-1.5.md
docs/stories/epic-3/: story-3.1-multi-position-tracking.md
electron/: main.js  package.json  preload.js
electron/renderer/: package.json
electron/src/: index.ts
scripts/: build.bat  build.js  build.sh  dev.bat  dev.js  dev.sh  generate_test_data.rs  test.bat  test.sh
src/: features.rs  lib.rs  main.rs
src/config/: mod.rs
src/credentials/: mod.rs
test-data/: invalid_mixed.csv  malformed.csv  valid_medium.csv  valid_small.csv
