[package]
name = "backtestr-ai"
version = "0.1.0"
edition = "2021"
authors = ["BackTestr AI Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "backtestr_ai"
path = "src/main.rs"

[workspace]
members = [
    "crates/backtestr-core",
    "crates/backtestr-data",
    # Epic 5: IPC for frontend - not needed yet
    # "crates/backtestr-ipc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BackTestr AI Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/backtestr-ai/backtestr"

[workspace.dependencies]
# Environment
dotenv = "0.15"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
# Using bundled feature for consistent builds
duckdb = { version = "1.3", features = ["bundled"] }

# Epic 4: Python integration - not needed yet
# pyo3 = { version = "0.20", features = ["extension-module", "abi3-py39"] }

# Performance
rayon = "1.8"
crossbeam = "0.8"

# Testing
proptest = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.bench]
inherits = "release"

[dependencies]
dotenv = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
backtestr-core = { path = "crates/backtestr-core" }
backtestr-data = { path = "crates/backtestr-data" }
# Epic 5: IPC - not needed yet
# backtestr-ipc = { path = "crates/backtestr-ipc" }

[features]
default = []
epic_2 = []  # Advanced data features
epic_3 = []  # MTF engine
epic_4 = []  # Python integration
epic_5 = []  # Frontend/IPC

