[package]
name = "backtestr-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Epic 4: Python integration - not needed yet
# pyo3 = { workspace = true }
rayon = { workspace = true }
crossbeam = { workspace = true }

# Internal dependencies
backtestr-data = { path = "../backtestr-data" }

# Core-specific dependencies
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
ordered-float = "4.2"
dashmap = "5.5"

# Persistence dependencies
bincode = "1.3"
zstd = "0.13"
twox-hash = "1.6"
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.8"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "mtf_benchmarks"
harness = false

[[bench]]
name = "indicator_benchmarks"
harness = false

[[bench]]
name = "persistence_benchmarks"
harness = false

