[package]
name = "backtestr-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }

# IPC-specific dependencies
bytes = "1.5"
flume = "0.11"
bincode = "1.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Pipes", "Win32_Security"] }

[dev-dependencies]
criterion = { workspace = true }